Sculpt: Masking operations crash if multires is in play #84002

Closed
opened 2020-12-21 00:48:28 +01:00 by Nathan · 13 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-19 06:25, hash: a5a302bd18
Worked: 2.91
Caused by 90e12e823f

Short description of error
Sculpt: Masking operations crash if multires is in play

Exact steps for others to reproduce the error

  • add a multiresolution modifier to the default cube
  • subdivide (at least) once
  • with the mask brush: do a stroke [should crash]
  • OR: do a box mask
  • OR: clear a mask
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-19 06:25, hash: `a5a302bd18` Worked: 2.91 Caused by 90e12e823f **Short description of error** Sculpt: Masking operations crash if multires is in play **Exact steps for others to reproduce the error** - add a multiresolution modifier to the default cube - subdivide (at least) once - with the mask brush: do a stroke [should crash] - OR: do a box mask - OR: clear a mask
Author

Added subscriber: @NathanWondrak

Added subscriber: @NathanWondrak
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-12-21 10:42:26 +01:00
Member

Can confirm, checking.

Can confirm, checking.

Added subscriber: @rjg

Added subscriber: @rjg

I can reproduce this issue with the provided file, but couldn't with the sculpting application template.

sculpt_undo_store_mask(Object * ob, SculptUndoNode * unode) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/sculpt_paint/sculpt_undo.c:1101)
SCULPT_undo_push_node(Object * ob, PBVHNode * node, SculptUndoType type) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/sculpt_paint/sculpt_undo.c:1306)
mask_flood_fill_task_cb(void * restrict userdata, const int i, const TaskParallelTLS * restrict UNUSED_tls) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/sculpt_paint/paint_mask.c:132)
RangeTask::operator()(tbb::blocked_range<int> const&) const::{lambda()#1}::operator()() const(const RangeTask::<lambda()> * const __closure) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/task_range.cc:96)
tbb::interface7::internal::delegated_function<RangeTask::operator()(tbb::blocked_range<int> const&) const::{lambda()#1} const, void>::operator()() const(const tbb::interface7::internal::delegated_function<const RangeTask::operator()(const tbb::blocked_range<int>&) const::<lambda()>, void> * const this) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task_arena.h:93)
tbb::interface7::internal::isolate_within_arena(tbb::interface7::internal::delegate_base&, long) (Unknown Source:0)
tbb::interface7::internal::isolate_impl<void, RangeTask::operator()(tbb::blocked_range<int> const&) const::{lambda()#1} const>(RangeTask::operator()(tbb::blocked_range<int> const&) const::{lambda()#1} const&)(const RangeTask::<lambda()> & f) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task_arena.h:160)
tbb::interface7::this_task_arena::isolate<RangeTask::operator()(tbb::blocked_range<int> const&) const::{lambda()#1}>(tbb::interface7::internal::return_type_or_void const&)(const RangeTask::<lambda()> & f) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task_arena.h:395)
RangeTask::operator()(const RangeTask * const this, const tbb::blocked_range<int> & r) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/task_range.cc:92)
tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>::run_body(tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const> * const this, tbb::blocked_range<int> & r) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/parallel_for.h:115)
tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_mode<tbb::interface9::internal::auto_partition_type> >::work_balance<tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>, tbb::blocked_range<int> >(tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_mode<tbb::interface9::internal::auto_partition_type> > * const this, tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const> & start, tbb::blocked_range<int> & range) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/partitioner.h:438)
tbb::interface9::internal::partition_type_base<tbb::interface9::internal::auto_partition_type>::execute<tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>, tbb::blocked_range<int> >(tbb::interface9::internal::partition_type_base<tbb::interface9::internal::auto_partition_type> * const this, tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const> & start, tbb::blocked_range<int> & range) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/partitioner.h:256)
tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>::execute(tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const> * const this) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/parallel_for.h:142)
tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::process_bypass_loop(tbb::internal::context_guard_helper<false>&, tbb::task*, long) (Unknown Source:0)
tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::local_wait_for_all(tbb::task&, tbb::task*) (Unknown Source:0)
tbb::internal::arena::process(tbb::internal::generic_scheduler&) (Unknown Source:0)
tbb::internal::market::process(rml::job&) (Unknown Source:0)
tbb::internal::rml::private_worker::run() (Unknown Source:0)
tbb::internal::rml::private_worker::thread_routine(void*) (Unknown Source:0)
libpthread.so.0!start_thread(void * arg) (/build/glibc-ZN95T4/glibc-2.31/nptl/pthread_create.c:477)
I can reproduce this issue with the provided file, but couldn't with the sculpting application template. ```lines sculpt_undo_store_mask(Object * ob, SculptUndoNode * unode) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/sculpt_paint/sculpt_undo.c:1101) SCULPT_undo_push_node(Object * ob, PBVHNode * node, SculptUndoType type) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/sculpt_paint/sculpt_undo.c:1306) mask_flood_fill_task_cb(void * restrict userdata, const int i, const TaskParallelTLS * restrict UNUSED_tls) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/sculpt_paint/paint_mask.c:132) RangeTask::operator()(tbb::blocked_range<int> const&) const::{lambda()#1}::operator()() const(const RangeTask::<lambda()> * const __closure) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/task_range.cc:96) tbb::interface7::internal::delegated_function<RangeTask::operator()(tbb::blocked_range<int> const&) const::{lambda()#1} const, void>::operator()() const(const tbb::interface7::internal::delegated_function<const RangeTask::operator()(const tbb::blocked_range<int>&) const::<lambda()>, void> * const this) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task_arena.h:93) tbb::interface7::internal::isolate_within_arena(tbb::interface7::internal::delegate_base&, long) (Unknown Source:0) tbb::interface7::internal::isolate_impl<void, RangeTask::operator()(tbb::blocked_range<int> const&) const::{lambda()#1} const>(RangeTask::operator()(tbb::blocked_range<int> const&) const::{lambda()#1} const&)(const RangeTask::<lambda()> & f) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task_arena.h:160) tbb::interface7::this_task_arena::isolate<RangeTask::operator()(tbb::blocked_range<int> const&) const::{lambda()#1}>(tbb::interface7::internal::return_type_or_void const&)(const RangeTask::<lambda()> & f) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/task_arena.h:395) RangeTask::operator()(const RangeTask * const this, const tbb::blocked_range<int> & r) (/home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/task_range.cc:92) tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>::run_body(tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const> * const this, tbb::blocked_range<int> & r) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/parallel_for.h:115) tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_mode<tbb::interface9::internal::auto_partition_type> >::work_balance<tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>, tbb::blocked_range<int> >(tbb::interface9::internal::dynamic_grainsize_mode<tbb::interface9::internal::adaptive_mode<tbb::interface9::internal::auto_partition_type> > * const this, tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const> & start, tbb::blocked_range<int> & range) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/partitioner.h:438) tbb::interface9::internal::partition_type_base<tbb::interface9::internal::auto_partition_type>::execute<tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>, tbb::blocked_range<int> >(tbb::interface9::internal::partition_type_base<tbb::interface9::internal::auto_partition_type> * const this, tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const> & start, tbb::blocked_range<int> & range) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/partitioner.h:256) tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const>::execute(tbb::interface9::internal::start_for<tbb::blocked_range<int>, RangeTask, tbb::auto_partitioner const> * const this) (/home/dev/01-data/01-git/blender-git/lib/linux_centos7_x86_64/tbb/include/tbb/parallel_for.h:142) tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::process_bypass_loop(tbb::internal::context_guard_helper<false>&, tbb::task*, long) (Unknown Source:0) tbb::internal::custom_scheduler<tbb::internal::IntelSchedulerTraits>::local_wait_for_all(tbb::task&, tbb::task*) (Unknown Source:0) tbb::internal::arena::process(tbb::internal::generic_scheduler&) (Unknown Source:0) tbb::internal::market::process(rml::job&) (Unknown Source:0) tbb::internal::rml::private_worker::run() (Unknown Source:0) tbb::internal::rml::private_worker::thread_routine(void*) (Unknown Source:0) libpthread.so.0!start_thread(void * arg) (/build/glibc-ZN95T4/glibc-2.31/nptl/pthread_create.c:477) ```
Member

In fact, any masking operation crashes since 90e12e823f if multires is in play

In fact, any masking operation crashes since 90e12e823f if multires is in play
Philipp Oeser changed title from Clear mask in sculpt mode crashes to Sculpt: Masking operations crash if multires is in play 2020-12-21 11:55:10 +01:00
Philipp Oeser removed their assignment 2020-12-21 12:04:38 +01:00
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

@mont29: I assume you are quicker here: mind having a look?

@mont29: I assume you are quicker here: mind having a look?

Added subscriber: @Sergey

Added subscriber: @Sergey

This is actually a nightmare of several entangled issues, involving very, very bad code and general architecture of sculpt mode...

Will probably have some patches ready by tomorrow, but we'll have to wait for @Sergey since some involve multires and am highly unsure I fully grasp the whole picture there.

This is actually a nightmare of several entangled issues, involving very, **very** bad code and general architecture of sculpt mode... Will probably have some patches ready by tomorrow, but we'll have to wait for @Sergey since some involve multires and am highly unsure I fully grasp the whole picture there.

This issue was referenced by d29a720c45

This issue was referenced by d29a720c45e55047e4f0e02df4652ba03a49c528

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-12-23 16:06:32 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84002
No description provided.